# rongnote

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deploy.md  docker-compose.example.yml  docker-compose.yml
.cargo/: config.example.toml
.github/ISSUE_TEMPLATE/: bug.md  config.yml
.github/workflows/: image.yml
cli/: Cargo.toml
cli/src/: api.rs  config.rs  crypto.rs  main.rs
extension/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
extension/src/: background.ts  manifest.json  options.html  options.ts  popup.html  popup.ts
extension/src/lib/: api.ts  crypto.ts  items.ts  store.ts  totp.ts
landing/: index.html
server/: Cargo.toml
server/migrations/: 0001_init.sql  0002_e2e_crypto.sql  0003_recovery.sql  0004_trash.sql  0005_passkeys.sql  0006_files.sql  0007_tasks.sql  0008_audit_log.sql  0009_pinned.sql  0010_shares.sql  0011_versions.sql  0012_list_type.sql  0013_team_spaces.sql  0014_events.sql  0015_kiosk_role.sql
server/src/: audit.rs  auth.rs  b64.rs  config.rs  db.rs  error.rs  export.rs  files.rs  items.rs  main.rs  passkey.rs  session.rs  shares.rs  spaces.rs  static_assets.rs  transit.rs
web/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
web/scripts/: build-icons.mjs
web/src/: app.css  app.html  hooks.client.ts
web/src/lib/: BookmarkEditor.svelte  CommandPalette.svelte  Editor.svelte  EventEditor.svelte  FileEditor.svelte  ItemIcon.svelte  ListEditor.svelte  NoteEditor.svelte  PasswordGenerator.svelte  SecretEditor.svelte  Sidebar.svelte  SnippetEditor.svelte  TaskCheckbox.svelte  TaskEditor.svelte  UnlockPrompt.svelte  api.ts  crypto.ts  csvImport.ts  dashboardSettings.svelte.ts  dev-seed.ts  files.ts  hibp.ts  itemCrypto.ts  items.svelte.ts  password.ts  prefs.svelte.ts  session.svelte.ts  spaces.svelte.ts  totp.ts  vault.svelte.ts  webauthn.ts
web/src/lib/dashboard/: CalendarWidget.svelte  ClockWidget.svelte  ListWidget.svelte  SettingsModal.svelte  TasksModal.svelte  TasksWidget.svelte  TransitStopModal.svelte  TransitWidget.svelte  WeatherWidget.svelte  Widget.svelte
web/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
web/src/routes/dashboard/: +page.svelte
web/static/: manifest.webmanifest
(+15 files in other folders)
