[package]
name = "rongnote-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "rongnote"
path = "src/main.rs"

[dependencies]
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
blake2 = "0.10"
clap = { version = "4", features = ["derive", "wrap_help"] }
crypto_box = { version = "0.9", features = ["std"] }
crypto_secretbox = { version = "0.1", features = ["std"] }
digest = "0.10"
directories = "5"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "cookies"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "macros"] }
url = "2"
uuid = { version = "1", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
